feat: 매칭 로직 추가
- 접속 플레이어 정보 view 반영
- 게임 시작전 카운드 다운
- 화면 전환

--- a/src/main/resources/org/example/auctiongameclient/connect-view.fxml
+++ b/src/main/resources/org/example/auctiongameclient/connect-view.fxml
@@ -7,7 +7,7 @@
     <Label text="서버 접속"/>
     <HBox spacing="10" alignment="CENTER">
         <Label text="포트 번호:"/>
-        <TextField fx:id="portField" promptText="포트 번호 입력"/>
+        <TextField fx:id="portField" promptText="포트 번호 입력" text="12345"/>
     </HBox>
     <HBox spacing="10" alignment="CENTER">
         <Label text="이름:"/>
