--- a/src/main/resources/org/example/auctiongameclient/auction-client-view.fxml
+++ b/src/main/resources/org/example/auctiongameclient/auction-client-view.fxml
@@ -3,15 +3,17 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.media.MediaView?>
 
 <VBox spacing="20" alignment="CENTER" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.auctiongameclient.Controller.AuctionClientController">
-    <HBox spacing="10">
-        <Label text="포트 번호:"/>
-        <TextField fx:id="portField" text="12345"/>
-        <Label text="이름:"/>
-        <TextField fx:id="nameField"/>
-        <Button fx:id="connectButton" text="서버 연결" onAction="#connectToServer"/>
-    </HBox>
+<!--    <HBox spacing="10">-->
+<!--        <Label text="포트 번호:"/>-->
+<!--        <TextField fx:id="portField" text="12345"/>-->
+<!--        <Label text="이름:"/>-->
+<!--        <TextField fx:id="nameField"/>-->
+<!--        <Button fx:id="connectButton" text="서버 연결" onAction="#connectToServer"/>-->
+<!--    </HBox>-->
 
     <!-- 경매 및 메시지 영역 -->
     <TextArea fx:id="messageArea" editable="false" prefHeight="300" prefWidth="600" />
@@ -25,6 +27,12 @@
         <Button fx:id="bid1Button" text="1원" onAction="#sendBid1" disable="true"/>
         <Button fx:id="bid5Button" text="5원" onAction="#sendBid5" disable="true"/>
     </HBox>
+
+<!--    <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0">-->
+<!--        <center>-->
+<!--            <MediaView fx:id="mediaView" fitHeight="200.0" fitWidth="200.0" BorderPane.alignment="CENTER"></MediaView>-->
+<!--        </center>-->
+<!--    </BorderPane>-->
 
     <!-- 채팅 영역 -->
     <VBox spacing="10" alignment="CENTER">
