--- a/src/main/resources/org/example/auctiongameclient/auction-client-view.fxml
+++ b/src/main/resources/org/example/auctiongameclient/auction-client-view.fxml
@@ -1,45 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.media.MediaView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<VBox spacing="20" alignment="CENTER" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.auctiongameclient.Controller.AuctionClientController">
-<!--    <HBox spacing="10">-->
-<!--        <Label text="포트 번호:"/>-->
-<!--        <TextField fx:id="portField" text="12345"/>-->
-<!--        <Label text="이름:"/>-->
-<!--        <TextField fx:id="nameField"/>-->
-<!--        <Button fx:id="connectButton" text="서버 연결" onAction="#connectToServer"/>-->
-<!--    </HBox>-->
 
-    <!-- 경매 및 메시지 영역 -->
-    <TextArea fx:id="messageArea" editable="false" prefHeight="300" prefWidth="600" />
-
-    <!-- 이미지 표시 영역 -->
-    <ImageView fx:id="goodsImageView" fitWidth="100" fitHeight="100"/>
-
-    <HBox spacing="10" alignment="CENTER">
-        <Button fx:id="participateButton" text="경매 응찰" onAction="#sendParticipateRequest" disable="true"/>
-        <Button fx:id="notParticipateButton" text="경매 불응찰" onAction="#sendNotParticipateRequest" disable="true"/>
-        <Button fx:id="bid1Button" text="1원" onAction="#sendBid1" disable="true"/>
-        <Button fx:id="bid5Button" text="5원" onAction="#sendBid5" disable="true"/>
-    </HBox>
-
-<!--    <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0">-->
-<!--        <center>-->
-<!--            <MediaView fx:id="mediaView" fitHeight="200.0" fitWidth="200.0" BorderPane.alignment="CENTER"></MediaView>-->
-<!--        </center>-->
-<!--    </BorderPane>-->
-
-    <!-- 채팅 영역 -->
-    <VBox spacing="10" alignment="CENTER">
-        <TextArea fx:id="chatArea" editable="false" prefHeight="200" prefWidth="600" />
-        <HBox spacing="10">
-            <TextField fx:id="chatInputField" promptText="메시지를 입력하세요"/>
-            <Button text="전송" onAction="#sendChatMessage"/>
-        </HBox>
-    </VBox>
-</VBox>
+<AnchorPane prefHeight="600.0" prefWidth="900.0" styleClass="font" stylesheets="@../../../css/auction-client-view.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.auctiongameclient.Controller.AuctionClientController">
+   <children>
+        <TextArea fx:id="messageArea" editable="false" prefHeight="400.0" prefWidth="450.0" />
+   
+          <!-- 이미지 표시 영역 -->
+       <ImageView fx:id="goodsImageView" fitHeight="288.0" fitWidth="291.0" layoutX="450.0" />
+   
+          <HBox alignment="CENTER" layoutY="574.0" prefHeight="62.0" prefWidth="903.0" spacing="10">
+         <children>
+               <TextField fx:id="chatInputField" prefHeight="38.0" prefWidth="742.0" promptText="메시지를 입력하세요" />
+               <Button onAction="#sendChatMessage" prefHeight="45.0" prefWidth="136.0" text="전송" />
+         </children>
+       </HBox>
+      <VBox layoutX="741.0" prefHeight="288.0" prefWidth="161.0">
+         <children>
+              <Button fx:id="participateButton" disable="true" onAction="#sendParticipateRequest" prefHeight="58.0" prefWidth="161.0" text="경매 응찰" />
+              <Button fx:id="notParticipateButton" disable="true" onAction="#sendNotParticipateRequest" prefHeight="64.0" prefWidth="161.0" text="경매 불응찰" />
+              <Button fx:id="bid5Button" disable="true" onAction="#sendBid5" prefHeight="54.0" prefWidth="161.0" text="5원" />
+              <Button fx:id="bid1Button" disable="true" onAction="#sendBid1" prefHeight="54.0" prefWidth="161.0" text="1원" />
+            <Button mnemonicParsing="false" prefHeight="55.0" prefWidth="161.0" text="게임종료" />
+         </children>
+      </VBox>
+      <TextArea fx:id="chatArea" layoutX="-5.0" layoutY="400.0" prefHeight="177.0" prefWidth="900.0" />
+      <TextArea layoutX="450.0" layoutY="285.0" prefHeight="115.0" prefWidth="291.0" />
+      <HBox layoutX="741.0" layoutY="285.0" prefHeight="115.0" prefWidth="161.0" styleClass="music-box" stylesheets="@../../../css/auction-client-view.css" />
+   </children>
+</AnchorPane>
