--- a/src/main/resources/css/auction-client-view.css
+++ b/src/main/resources/css/auction-client-view.css
@@ -1,7 +1,43 @@
 .music-box {
-    -fx-background-color: blue;
+    -fx-background-position: center center;
+    -fx-background-size: cover;
+}
+
+.playButton {
+    -fx-background-image: url(../images/play-icon.png);
+    -fx-background-position: center center;
+    -fx-background-size: contain;
+    -fx-background-radius: 25;
+    -fx-pref-width: 50;
+    -fx-pref-height: 50;
+}
+
+.pauseButton {
+    -fx-background-image: url(../images/pause-icon.png);
+    -fx-background-position: center center;
+    -fx-background-size: contain;
+    -fx-background-radius: 25;
+    -fx-pref-width: 50;
+    -fx-pref-height: 50;
 }
 
 .font {
-    -fx-font-family: "Bernard MT Condensed";
+    -fx-font-family: "Hakgyoansim Byeoljari TTF L";
+}
+
+.messageArea {
+    -fx-font-size: 14pt;
+    /*-fx-background-image: url(../images/frame1.png);*/
+    /*-fx-background-position: center;*/
+    /*-fx-background-size: 50 50;*/
+}
+
+.button {
+
+    -fx-cursor: hand;
+}
+
+.button:hover {
+    -fx-background-color: rgba(255, 255, 255, 0.5);
+    -fx-text-fill: black;
 }
