--- a/src/main/resources/org/example/auctiongameclient/auction-client-view.fxml
+++ b/src/main/resources/org/example/auctiongameclient/auction-client-view.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
@@ -20,7 +21,7 @@
           <HBox alignment="CENTER" layoutY="574.0" prefHeight="62.0" prefWidth="903.0" spacing="10">
          <children>
                <TextField fx:id="chatInputField" prefHeight="38.0" prefWidth="742.0" promptText="메시지를 입력하세요" />
-               <Button onAction="#sendChatMessage" prefHeight="45.0" prefWidth="136.0" text="전송" />
+               <Button onAction="#sendChatMessage" prefHeight="38.0" prefWidth="121.0" text="전송" />
          </children>
        </HBox>
       <VBox layoutX="741.0" prefHeight="288.0" prefWidth="161.0" styleClass="font" stylesheets="@../../../css/auction-client-view.css">
@@ -36,12 +37,17 @@
 <!--       플레이어 자신이 낙찰받은 아이템과 자본금 표시-->
       <TextArea disable="true" layoutX="450.0" layoutY="285.0" prefHeight="115.0" prefWidth="291.0" />
 <!--       -->
-      <HBox layoutX="741.0" layoutY="285.0" prefHeight="115.0" prefWidth="161.0" styleClass="music-box" stylesheets="@../../../css/auction-client-view.css">
+      <HBox fx:id="musicBox" layoutX="741.0" layoutY="285.0" prefHeight="115.0" prefWidth="161.0" styleClass="music-box-playing" stylesheets="@../../../css/auction-client-view.css">
          <children>
-            <Button fx:id="musicButton" mnemonicParsing="false" onAction="#musicPlayPause" prefHeight="60.0" prefWidth="58.0" styleClass="pauseButton" stylesheets="@../../../css/auction-client-view.css">
+            <Button fx:id="musicButton" mnemonicParsing="false" onAction="#musicPlayPause" prefHeight="25.0" prefWidth="29.0" styleClass="pauseButton" stylesheets="@../../../css/auction-client-view.css">
                <HBox.margin>
-                  <Insets left="50.0" top="25.0" />
+                  <Insets left="10.0" right="10.0" top="85.0" />
                </HBox.margin></Button>
+            <Slider fx:id="volumeSlider" prefHeight="14.0" prefWidth="121.0">
+               <HBox.margin>
+                  <Insets top="90.0" />
+               </HBox.margin>
+            </Slider>
          </children></HBox>
       <MediaView fx:id="mediaView" />
    </children>
