--- a/src/main/resources/org/example/auctiongameclient/waiting-room-view.fxml
+++ b/src/main/resources/org/example/auctiongameclient/waiting-room-view.fxml
@@ -1,19 +1,70 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.lang.String?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox spacing="20" alignment="CENTER" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.auctiongameclient.Controller.WaitingRoomController">
-    <Label text="대기방" style="-fx-font-size: 24px; -fx-font-weight: bold;"/>
-    <VBox spacing="10" alignment="CENTER">
-        <Label text="플레이어 1:"/>
-        <Label fx:id="player1Label" text="대기 중..." style="-fx-font-size: 16px;"/>
-        <Label text="플레이어 2:"/>
-        <Label fx:id="player2Label" text="대기 중..." style="-fx-font-size: 16px;"/>
-        <Label text="플레이어 3:"/>
-        <Label fx:id="player3Label" text="대기 중..." style="-fx-font-size: 16px;"/>
-        <Label text="플레이어 4:"/>
-        <Label fx:id="player4Label" text="대기 중..." style="-fx-font-size: 16px;"/>
+<VBox alignment="CENTER" prefHeight="600.0" prefWidth="900.0" spacing="10.0" stylesheets="@../../../css/waiting-room.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.auctiongameclient.Controller.WaitingRoomController">
+    <Label stylesheets="@../../../css/waiting-room.css" text="대기방" textFill="#f8e4e403">
+      <font>
+         <Font size="30.0" />
+      </font>
+      <styleClass>
+         <String fx:value="font" />
+         <String fx:value="title" />
+      </styleClass>
+      <VBox.margin>
+         <Insets top="10.0" />
+      </VBox.margin></Label>
+    <VBox alignment="CENTER" opacity="0.8" prefHeight="257.0" prefWidth="874.0" spacing="10.0" styleClass="player-list" stylesheets="@../../../css/waiting-room.css">
+        <Label styleClass="font" stylesheets="@../../../css/waiting-room.css" text="플레이어 1:">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+        <Label fx:id="player1Label" styleClass="font" stylesheets="@../../../css/waiting-room.css" text="대기 중...">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+        <Label styleClass="font" stylesheets="@../../../css/waiting-room.css" text="플레이어 2:">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+        <Label fx:id="player2Label" styleClass="font" stylesheets="@../../../css/waiting-room.css" text="대기 중...">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+        <Label styleClass="font" stylesheets="@../../../css/waiting-room.css" text="플레이어 3:">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+        <Label fx:id="player3Label" styleClass="font" stylesheets="@../../../css/waiting-room.css" text="대기 중...">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+        <Label styleClass="font" stylesheets="@../../../css/waiting-room.css" text="플레이어 4:">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+        <Label fx:id="player4Label" styleClass="font" stylesheets="@../../../css/waiting-room.css" text="대기 중...">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <VBox.margin>
+         <Insets left="10.0" right="10.0" />
+      </VBox.margin>
     </VBox>
-    <TextArea fx:id="chatArea" editable="false" prefHeight="200" prefWidth="400" wrapText="true"/>
+    <TextArea fx:id="chatArea" editable="false" prefHeight="318.0" prefWidth="880.0" styleClass="font" stylesheets="@../../../css/waiting-room.css" wrapText="true">
+      <VBox.margin>
+         <Insets bottom="10.0" left="10.0" right="10.0" />
+      </VBox.margin>
+      <font>
+         <Font size="18.0" />
+      </font></TextArea>
+   <styleClass>
+      <String fx:value="background" />
+      <String fx:value="font" />
+   </styleClass>
 </VBox>
