feat: 호버 이벤트, 클릭 이벤트 format
- 아이템 호버시, 설명 추가
- 아이템 클릭 갯수 검사, 공통 메서드

--- a/src/main/resources/org/example/auctiongameclient/main-game-view.fxml
+++ b/src/main/resources/org/example/auctiongameclient/main-game-view.fxml
@@ -130,15 +130,15 @@
                     <Label fx:id="itemSlot4Label" layoutX="5" layoutY="45" text="x0"
                            style="-fx-text-fill: black; -fx-font-weight: bold;"/>
                 </Pane>
-                <Pane fx:id="itemSlot5" prefHeight="60" prefWidth="60" >
+                <Pane fx:id="itemSlot5" prefHeight="60" onMouseClicked="#useItem" prefWidth="60" >
                     <Label fx:id="itemSlot5Label" layoutX="5" layoutY="45" text="x0"
                            style="-fx-text-fill: black; -fx-font-weight: bold;"/>
                 </Pane>
-                <Pane fx:id="itemSlot6" prefHeight="60" prefWidth="60" >
+                <Pane fx:id="itemSlot6" prefHeight="60" onMouseClicked="#useItem" prefWidth="60" >
                     <Label fx:id="itemSlot6Label" layoutX="5" layoutY="45" text="x0"
                            style="-fx-text-fill: black; -fx-font-weight: bold;"/>
                 </Pane>
-                <Pane fx:id="itemSlot7" prefHeight="60" prefWidth="60" >
+                <Pane fx:id="itemSlot7" prefHeight="60" onMouseClicked="#useItem" prefWidth="60" >
                     <Label fx:id="itemSlot7Label" layoutX="5" layoutY="45" text="x0"
                            style="-fx-text-fill: black; -fx-font-weight: bold;"/>
                 </Pane>
