일감호의 기적 아이템 기능 구현 UI변경

--- a/src/main/resources/css/main-menu.css
+++ b/src/main/resources/css/main-menu.css
@@ -30,7 +30,7 @@
 }
 
 .title {
-    -fx-background-image: url(../images/Bid-OR-NOT-2.png);
+    -fx-background-image: url(../images/경매게임2.png);
     -fx-background-size: cover;
     -fx-background-position: center center;
     /*-fx-background-color: white;*/
