스턴건으로 강제 불응 상태가 되어도 불참시 5원 받는 혜택 주는지? -> 안받기
highestaBidder가 스턴건을 맞은 사람이라면..? -> 롤백시키기

추가: 자기 자신한테 쏘는거 & 이미 불응인 참가자한테 쏘는거 막기
현재 경매 참가자 label 색깔 바꾸기
아이템 쓰면 -1하기
 2명이 있을 때 스턴건 쏘면 -> 돈안내고 가져갈 수 있음
3명이 있을 때(나 불응찰, A응찰, B응찰) -> B한테 쏘면 A에게 응찰됨
4명이 있을 때(나 불응찰, A응찰, B응찰, C응찰) -> B에게 쏘고 A, C는 계속 경매 가능한 상태 & 롤백 되는 것 같은데 디버깅이 너무 빡셈..

--- a/src/main/resources/org/example/auctiongameclient/main-game-view.fxml
+++ b/src/main/resources/org/example/auctiongameclient/main-game-view.fxml
@@ -80,10 +80,10 @@
     <HBox layoutY="405" spacing="20" style="-fx-padding: 0 0 0 18;">
         <!-- 유저 이름 표시 -->
         <HBox alignment="CENTER" spacing="18">
-            <Label fx:id="user1Label" prefHeight="80" prefWidth="80" style="-fx-border-color: black; -fx-background-color: lightblue;                    -fx-text-alignment: center; -fx-alignment: center; -fx-font-weight: bold;                    -fx-padding: 10;" text="유저1" />
-            <Label fx:id="user2Label" prefHeight="80" prefWidth="80" style="-fx-border-color: black; -fx-background-color: lightblue;                    -fx-text-alignment: center; -fx-alignment: center; -fx-font-weight: bold;                    -fx-padding: 10;" text="유저2" />
-            <Label fx:id="user3Label" prefHeight="80" prefWidth="80" style="-fx-border-color: black; -fx-background-color: lightblue;                    -fx-text-alignment: center; -fx-alignment: center; -fx-font-weight: bold;                    -fx-padding: 10;" text="유저3" />
-            <Label fx:id="user4Label" prefHeight="80" prefWidth="80" style="-fx-border-color: black; -fx-background-color: lightblue;                    -fx-text-alignment: center; -fx-alignment: center; -fx-font-weight: bold;                    -fx-padding: 10;" text="유저4" />
+            <Label fx:id="user1Label" prefHeight="80" prefWidth="80" style="-fx-border-color: black; -fx-background-color: lightgrey;                    -fx-text-alignment: center; -fx-alignment: center; -fx-font-weight: bold;                    -fx-padding: 10;" text="유저1" />
+            <Label fx:id="user2Label" prefHeight="80" prefWidth="80" style="-fx-border-color: black; -fx-background-color: lightgrey;                    -fx-text-alignment: center; -fx-alignment: center; -fx-font-weight: bold;                    -fx-padding: 10;" text="유저2" />
+            <Label fx:id="user3Label" prefHeight="80" prefWidth="80" style="-fx-border-color: black; -fx-background-color: lightgrey;                    -fx-text-alignment: center; -fx-alignment: center; -fx-font-weight: bold;                    -fx-padding: 10;" text="유저3" />
+            <Label fx:id="user4Label" prefHeight="80" prefWidth="80" style="-fx-border-color: black; -fx-background-color: lightgrey;                    -fx-text-alignment: center; -fx-alignment: center; -fx-font-weight: bold;                    -fx-padding: 10;" text="유저4" />
 
         </HBox>
 
