--- a/src/main/resources/org/example/auctiongameclient/connect-view.fxml
+++ b/src/main/resources/org/example/auctiongameclient/connect-view.fxml
@@ -38,28 +38,38 @@
 <VBox prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.auctiongameclient.Controller.ConnectController">
    <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0">
       <left>
-         <AnchorPane prefHeight="600.0" prefWidth="900.0" styleClass="main-bg" stylesheets="@../../../css/main-menu.css" BorderPane.alignment="CENTER">
+         <AnchorPane prefHeight="600.0" prefWidth="900.0" styleClass="main-bg" stylesheets="@../../../css/main-menu.css"
+                     BorderPane.alignment="CENTER">
             <BorderPane.margin>
-               <Insets />
+               <Insets/>
             </BorderPane.margin>
-            <children>
-               <Pane layoutX="198.0" layoutY="391.0" prefHeight="142.0" prefWidth="504.0" styleClass="inner-bg" stylesheets="@../../../css/main-menu.css">
-                  <children>
-                     <Label fx:id="alertMessage" layoutX="105.0" layoutY="111.0" prefHeight="23.0" prefWidth="298.0" styleClass="connection-check" stylesheets="@../../../css/main-menu.css" textFill="#d31111" />
-                  </children></Pane>
-               <Label layoutX="225.0" layoutY="420.0" prefHeight="37.0" prefWidth="84.0" text="port number" />
-               <TextField fx:id="portField" layoutX="318.0" layoutY="424.0" prefHeight="28.0" prefWidth="260.0" text="12345" />
-               <Label layoutX="225.0" layoutY="459.0" prefHeight="37.0" prefWidth="76.0" text="user name" />
-               <TextField fx:id="nameField" layoutX="318.0" layoutY="464.0" prefHeight="28.0" prefWidth="260.0" />
-               <Button fx:id="connectButton" layoutX="600.0" layoutY="422.0" mnemonicParsing="false" onAction="#connectToServer" prefHeight="71.0" prefWidth="71.0" stylesheets="@../../../css/main-menu.css" text="Connect" />
-               <Pane layoutX="174.0" layoutY="-77.0" prefHeight="359.0" prefWidth="548.0" styleClass="title" stylesheets="@../../../css/main-menu.css" />
+
+            <Pane layoutX="198.0" layoutY="391.0" prefHeight="142.0" prefWidth="504.0" styleClass="inner-bg"
+                  stylesheets="@../../../css/main-menu.css">
+               <Label fx:id="alertMessage" layoutX="105.0" layoutY="111.0" prefHeight="23.0" prefWidth="298.0"
+                      styleClass="connection-check" stylesheets="@../../../css/main-menu.css" textFill="#d31111"/>
+            </Pane>
+
+            <!-- 서버 주소 입력 필드 -->
+            <Label layoutX="225.0" layoutY="420.0" prefHeight="37.0" prefWidth="84.0" text="서버주소"/>
+            <TextField fx:id="addressField" layoutX="318.0" layoutY="424.0" prefHeight="28.0" prefWidth="260.0"
+                       text="localhost"/>
+
+            <!-- 사용자 이름 입력 필드 -->
+            <Label layoutX="225.0" layoutY="459.0" prefHeight="37.0" prefWidth="76.0" text="닉네임"/>
+            <TextField fx:id="nameField" layoutX="318.0" layoutY="464.0" prefHeight="28.0" prefWidth="260.0"/>
+
+            <Button fx:id="connectButton" layoutX="600.0" layoutY="422.0" mnemonicParsing="false"
+                    onAction="#connectToServer" prefHeight="71.0" prefWidth="71.0"
+                    stylesheets="@../../../css/main-menu.css" text="Connect"/>
+            <Pane layoutX="174.0" layoutY="-77.0" prefHeight="359.0" prefWidth="548.0" styleClass="title"
+                  stylesheets="@../../../css/main-menu.css"/>
             <!--   <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity">-->
             <!--      <center>-->
             <!--         -->
             <!--      </center>-->
             <!--   </BorderPane>-->
-               <MediaView fx:id="mediaView" layoutX="122.0" layoutY="134.0" />
-            </children>
+            <MediaView fx:id="mediaView" layoutX="122.0" layoutY="134.0"/>
          </AnchorPane>
       </left>
 <!--      prefHeight="400.0" prefWidth="600.0"-->
