- 승리, 패배시 효과음 및 이펙트 추가 - 아이콘 추가

--- a/src/main/resources/css/auction-client-view.css
+++ b/src/main/resources/css/auction-client-view.css
@@ -53,3 +53,13 @@
 .items {
     -fx-cursor: hand;
 }
+
+.win-popup {
+    -fx-font-size: 60;
+    -fx-text-fill: blue;
+}
+
+.lose-popup {
+    -fx-font-size: 60;
+    -fx-text-fill: red;
+}
