--- a/src/main/resources/org/example/auctiongameclient/main-game-view.fxml
+++ b/src/main/resources/org/example/auctiongameclient/main-game-view.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -10,6 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.media.MediaView?>
 <?import javafx.scene.text.Font?>
@@ -123,6 +125,37 @@
         <TextField fx:id="chatInputField" prefHeight="38.0" prefWidth="742.0" promptText="메시지를 입력하세요" />
         <Button onAction="#sendChatMessage" prefHeight="38.0" prefWidth="121.0" text="전송" />
     </HBox>
+   <StackPane layoutX="258.0" layoutY="228.0" prefHeight="274.0" prefWidth="388.0">
+      <children>
+         <Pane prefHeight="242.0" prefWidth="352.0">
+            <children>
+               <Label fx:id="winLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="96.0" layoutY="64.0" opacity="0.84" prefHeight="142.0" prefWidth="188.0" stylesheets="@../../../css/auction-client-view.css" text="승리!" visible="false">
+                  <font>
+                     <Font size="33.0" />
+                  </font>
+                  <styleClass>
+                     <String fx:value="win-popup" />
+                     <String fx:value="font" />
+                     <String fx:value="blinking-label" />
+                  </styleClass>
+               </Label>
+            </children>
+         </Pane>
+         <Pane prefHeight="242.0" prefWidth="352.0">
+            <children>
+               <Label fx:id="loseLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="96.0" layoutY="64.0" opacity="0.84" prefHeight="142.0" prefWidth="188.0" stylesheets="@../../../css/auction-client-view.css" text="패배" visible="false">
+                  <font>
+                     <Font size="33.0" />
+                  </font>
+                  <styleClass>
+                     <String fx:value="lose-popup" />
+                     <String fx:value="font" />
+                  </styleClass>
+               </Label>
+            </children>
+         </Pane>
+      </children>
+   </StackPane>
 
 
 </AnchorPane>
